--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Personal Portfolio</title>
 </head>
 <body>
+    <header>
+        <!--  -->
+        <!-- SIMPLE HEADER -->
+        <h2>Keane's Portfolio</h2>
+    </header>
+
+    <Section>
+        <!-- SECTION IS USED FOR THE FLEXBOXES -->
+        <div class="container1">
+            <!-- Creating intro1 with the relevant information -->
+            <div class="intro1">
+                <img src="BW2.jpg" alt="keane" class="introimage">
+                <div class="intro1text">
+                   <h2>Keane Travasso</h2>
+                   <p>Diploma in Information Technology</p>
+                   <p>Ngee Ann Polytechnic</p>
+                   <p>keane@gmail.com</p>
+                </div>
+            </div>
+            <!-- Creating intro2 with the relevant information -->
+            <div class="intro2">
+                <div class="intro2text">
+                    <h3>Hey, I'm</h3>
+                    <h1>Keane Travasso</h1>
+                    <p>Information Technology Student</p>
+                </div>
+            </div>
+        </div>
+
+    </Section>
     
 </body>
 </html>
