--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <Section>
         <!-- SECTION IS USED FOR THE FLEXBOXES -->
+        <!-- Container 1 will be used as the introduction to the webpage -->
+        <!-- It will be in rows and intro1 will be a different size than intro2 -->
         <div class="container1">
             <!-- Creating intro1 with the relevant information -->
             <div class="intro1">
@@ -35,6 +37,13 @@
                     <h1>Keane Travasso</h1>
                     <p>Information Technology Student</p>
                 </div>
+            </div>
+        </div>
+        <div class="container2">
+            <div class="about">
+                <h2 class="about2">About</h2>
+                <h3 class="bgd">My Background</h3>
+                <p class="abouttext">I am a person who appreciates peace and enjoys working and making connections with all types of people. I often find myself motivating and encouraging other teammates when they are in doubt. I also take delight in thinking flexibly to solve problems and succeed.</p>
             </div>
         </div>
 
