--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Personal Portfolio</title>
 </head>
@@ -44,6 +44,33 @@
                 <h2 class="about2">About</h2>
                 <h3 class="bgd">My Background</h3>
                 <p class="abouttext">I am a person who appreciates peace and enjoys working and making connections with all types of people. I often find myself motivating and encouraging other teammates when they are in doubt. I also take delight in thinking flexibly to solve problems and succeed.</p>
+            </div>
+            <div class="education">
+                <h2 class="edu">Education</h2>
+                <h3 class="whr">Where I have learned</h3>
+                <p class="saps"><a href="https://stanthonyspri.moe.edu.sg/"><img src="saps.jpg" alt="Saps" width="100" height="100"></a></p>
+                <div class="edutext">
+                    <p>2010-2015</p>
+                    <p>St. Anthony Primary School</p>
+                    <p>30 Bukit Batok Street 32, SG 659401</p>
+                </div>
+                <p class="bbss"><a href="https://bukitbatoksec.moe.edu.sg/"><img src="bbss.jpg" alt="Bbss" width="100" height="100"></a></p>
+                <div class="edutext2">
+                    <p>2016-2019</p>
+                    <p>Bukit Batok Secondary School</p>
+                    <p>50 Bukit Batok West Ave 8, SG 658962</p>
+                </div>
+                <p class="np"><a href="https://www.np.edu.sg/ict/Pages/default.aspx"><img src="np.jpg" alt="Np" width="100" height="100"></a></p>
+                <div class="edutext3">
+                    <p>2020-Present</p>
+                    <p>Ngee Ann Polytechnic</p>
+                    <p>535 Clementi Road, SG 599489</p>
+                </div>
+
+                
+
+
+
             </div>
         </div>
 
