--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
                     <p>St. Anthony Primary School</p>
                     <p>30 Bukit Batok Street 32, SG 659401</p>
                 </div>
+
                 <p class="bbss"><a href="https://bukitbatoksec.moe.edu.sg/"><img src="bbss.jpg" alt="Bbss" width="100" height="100"></a></p>
                 <div class="edutext2">
                     <p>2016-2019</p>
                     <p>Bukit Batok Secondary School</p>
                     <p>50 Bukit Batok West Ave 8, SG 658962</p>
                 </div>
+
                 <p class="np"><a href="https://www.np.edu.sg/ict/Pages/default.aspx"><img src="np.jpg" alt="Np" width="100" height="100"></a></p>
                 <div class="edutext3">
                     <p>2020-Present</p>
@@ -67,6 +69,29 @@
                     <p>535 Clementi Road, SG 599489</p>
                 </div>
 
+                <div class="exp">
+                    <h2 class="work">Experience</h2>
+                    <h3 class="whr2">Where I have worked</h3>
+                    <p class="ntuc"><a href="https://www.fairprice.com.sg/"><img src="ntuc.jpg" alt="NTUC" width="100" height="100"></a></p>
+                    <div class="exptext">
+                        <p>Nov 1 2019 - Dec 31 2019</p>
+                        <p>NTUC Cashier</p>
+                    </div>
+                </div>
+            <div class="skillbox">
+                <h2 class="sl">Skills & Languages</h2>
+                <div class="skilltxt">
+                    <p>Microsoft Word: 100%</p>
+                    <p>Microsoft Powerpoint: 100%</p>
+                    <p>Python: 80%</p>
+                    <p>Html: 70%</p>
+                    <p>C#: 60%</p>
+                </div>
+                <div class="langtxt">
+                    <p>English: 100%</p>
+                    <p>Hindi: 70%</p>
+                </div>
+            </div>
                 
 
 
