--- a/index.html
+++ b/index.html
@@ -39,36 +39,41 @@
                 </div>
             </div>
         </div>
+        <!-- Creating Container2 which is a column flexbox -->
         <div class="container2">
+            <!-- About Flexbox -->
             <div class="about">
                 <h2 class="about2">About</h2>
                 <h3 class="bgd">My Background</h3>
                 <p class="abouttext">I am a person who appreciates peace and enjoys working and making connections with all types of people. I often find myself motivating and encouraging other teammates when they are in doubt. I also take delight in thinking flexibly to solve problems and succeed.</p>
             </div>
+            <!-- Education Flexbox -->
+            <!-- Images are hyperlinked -->
             <div class="education">
                 <h2 class="edu">Education</h2>
                 <h3 class="whr">Where I have learned</h3>
+                <!-- Primary School -->
                 <p class="saps"><a href="https://stanthonyspri.moe.edu.sg/"><img src="saps.jpg" alt="Saps" width="100" height="100"></a></p>
                 <div class="edutext">
                     <p>2010-2015</p>
                     <p>St. Anthony Primary School</p>
                     <p>30 Bukit Batok Street 32, SG 659401</p>
                 </div>
-
+                <!-- Secondary School -->
                 <p class="bbss"><a href="https://bukitbatoksec.moe.edu.sg/"><img src="bbss.jpg" alt="Bbss" width="100" height="100"></a></p>
                 <div class="edutext2">
                     <p>2016-2019</p>
                     <p>Bukit Batok Secondary School</p>
                     <p>50 Bukit Batok West Ave 8, SG 658962</p>
                 </div>
-
+                <!-- Polytechnic -->
                 <p class="np"><a href="https://www.np.edu.sg/ict/Pages/default.aspx"><img src="np.jpg" alt="Np" width="100" height="100"></a></p>
                 <div class="edutext3">
                     <p>2020-Present</p>
                     <p>Ngee Ann Polytechnic</p>
                     <p>535 Clementi Road, SG 599489</p>
                 </div>
-
+                <!-- Work Experience  -->
                 <div class="exp">
                     <h2 class="work">Experience</h2>
                     <h3 class="whr2">Where I have worked</h3>
@@ -78,11 +83,12 @@
                         <p>NTUC Cashier</p>
                     </div>
                 </div>
+            <!-- Skills & Languages Skillbox -->
             <div class="skillbox">
                 <h2 class="sl">Skills & Languages</h2>
                 <div class="skilltxt">
-                    <p>Microsoft Word: 100%</p>
                     <p>Microsoft Powerpoint: 100%</p>
+                    <p>Microsoft Word: 100%</p>
                     <p>Python: 80%</p>
                     <p>Html: 70%</p>
                     <p>C#: 60%</p>
