--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
         <!-- Creating Container2 which is a column flexbox -->
         <div class="container2">
             <!-- About Flexbox -->
-            <div class="about">
+            <div class="aboutindex">
                 <h2 class="about2">About</h2>
                 <h3 class="bgd">My Background</h3>
                 <p class="abouttext">I am a person who appreciates peace and enjoys working and making connections with all types of people. I often find myself motivating and encouraging other teammates when they are in doubt. I also take delight in thinking flexibly to solve problems and succeed.</p>
+                <div class="aboutbuttonouter"><a href="about.html" class="aboutbutton">Read More</a></div>
             </div>
             <!-- Education Flexbox -->
             <!-- Images are hyperlinked -->
@@ -53,21 +54,21 @@
                 <h2 class="edu">Education</h2>
                 <h3 class="whr">Where I have learned</h3>
                 <!-- Primary School -->
-                <p class="saps"><a href="https://stanthonyspri.moe.edu.sg/"><img src="saps.jpg" alt="Saps" width="100" height="100"></a></p>
+                <p class="saps"><a href="https://stanthonyspri.moe.edu.sg/" target="_blank"><img src="saps.jpg" alt="Saps" width="100" height="100"></a></p>
                 <div class="edutext">
                     <p>2010-2015</p>
                     <p>St. Anthony Primary School</p>
                     <p>30 Bukit Batok Street 32, SG 659401</p>
                 </div>
                 <!-- Secondary School -->
-                <p class="bbss"><a href="https://bukitbatoksec.moe.edu.sg/"><img src="bbss.jpg" alt="Bbss" width="100" height="100"></a></p>
+                <p class="bbss"><a href="https://bukitbatoksec.moe.edu.sg/" target="_blank"><img src="bbss.jpg" alt="Bbss" width="100" height="100"></a></p>
                 <div class="edutext2">
                     <p>2016-2019</p>
                     <p>Bukit Batok Secondary School</p>
                     <p>50 Bukit Batok West Ave 8, SG 658962</p>
                 </div>
                 <!-- Polytechnic -->
-                <p class="np"><a href="https://www.np.edu.sg/ict/Pages/default.aspx"><img src="np.jpg" alt="Np" width="100" height="100"></a></p>
+                <p class="np"><a href="https://www.np.edu.sg/ict/Pages/default.aspx" target="_blank"><img src="np.jpg" alt="Np" width="100" height="100"></a></p>
                 <div class="edutext3">
                     <p>2020-Present</p>
                     <p>Ngee Ann Polytechnic</p>
@@ -77,31 +78,39 @@
                 <div class="exp">
                     <h2 class="work">Experience</h2>
                     <h3 class="whr2">Where I have worked</h3>
-                    <p class="ntuc"><a href="https://www.fairprice.com.sg/"><img src="ntuc.jpg" alt="NTUC" width="100" height="100"></a></p>
+                    <p class="ntuc"><a href="https://www.fairprice.com.sg/" target="_blank"><img src="ntuc.jpg" alt="NTUC" width="100" height="100"></a></p>
                     <div class="exptext">
                         <p>Nov 1 2019 - Dec 31 2019</p>
                         <p>NTUC Cashier</p>
                     </div>
                 </div>
-            <!-- Skills & Languages Skillbox -->
+            <!-- Skills & Languages Flexbox -->
             <div class="skillbox">
                 <h2 class="sl">Skills & Languages</h2>
                 <div class="skilltxt">
-                    <p>Microsoft Powerpoint: 100%</p>
-                    <p>Microsoft Word: 100%</p>
-                    <p>Python: 80%</p>
-                    <p>Html: 70%</p>
-                    <p>C#: 60%</p>
+                    <p>Microsoft Powerpoint</p>
+                    <p>Microsoft Word</p>
+                    <p>Python</p>
+                    <p>C#</p>
+                    <p>Html</p>
+                    <p>CSS</p>
+                    <p>JavaScript</p>                    
                 </div>
                 <div class="langtxt">
-                    <p>English: 100%</p>
-                    <p>Hindi: 70%</p>
+                    <p>English</p>
+                    <p>Hindi</p>
                 </div>
             </div>
-                
-
-
-
+            <!-- Projects Flexbox -->
+            <div class="projects">
+                <h2 class="projecthead">Some of my Projects</h2>
+                <div>
+                    <p class="protxt">- Redesigning TimeTree Website's Interface</p>
+                    <p class="protxt">- Redesigning Ikea Website's Interface</p>
+                    <p class="protxt">- Designing Obscurify</p>
+                    <p class="protxt">- Designing Last.Fm</p>
+                </div>
+            </div>
             </div>
         </div>
 
