Project page done

--- a/index.html
+++ b/index.html
@@ -108,13 +108,14 @@
                     <p class="protxt">- Redesigning TimeTree Website's Interface</p>
                     <p class="protxt">- Redesigning Ikea Website's Interface</p>
                     <p class="protxt">- Designing Obscurify</p>
-                    <p class="protxt">- Designing Last.Fm</p>
                 </div>
+                <div class="projectbuttonouter"><a href="project.html" class="projectbutton">Read More</a></div>
             </div>
             </div>
         </div>
-
-    </Section>
-    
+    </Section>   
 </body>
+<footer>
+    
+</footer>
 </html>
