--- a/about.html
+++ b/about.html
@@ -11,16 +11,18 @@
     </title>
 </head>
 <body>
-    <header>About Me</header>
+    <header><h2>About Me</h2></header>
     <section>
         <div class="container3">
             <h2 class="about">
                 More about Keane
             </h2>
             <div class="aboutpagetext">
-                <p>Keane is a patient and kind person who listens to his peers with understanding and empathy. He is able to think flexibly when problems arise, often suggesting solutions. He is capable of attaining his potential if he persists in the face of adversities. He also has an immense zeal for learning, responds to new academic concepts with awe and wonder and is an effective team player who contributes positively to group discussions.</p>
+                <p>Keane is a patient and kind person who listens to his peers with understanding and empathy. He is able to think flexibly when problems arise, often suggesting solutions. He is capable of attaining his potential if he persists in the face of adversities. He also has an immense zeal for learning, responds to new academic concepts with awe and wonder and is an effective team player who contributes positively to group discussions.</p><br>
                 <p>Keane also has an immense passion for technology and its uses. He likes how versatile technology is and is determined to create a career in the technological field. Keane would like to hone his skills of technology through NP's Information Technology course.</p>
-                <p>He has participated in several courses such as NP's Mechanical Engineering Course (3D Printing), NUS Geography Challenge 2019, UNSW English and Mathematics competition in 2017.</p>
+                <p>He has participated in several courses such as NP's Mechanical Engineering Course (3D Printing), NUS Geography Challenge 2019, UNSW English and Mathematics competition in 2017.</p><br>
+                <p>
+                    I plan on completing my diploma in Information Technology with a minimum GPA of 3.8 so that I will have a higher chance of getting into my desired university course at either a local or overseas university. I plan to pursue a degree in Computer Science after completing my National Service (NS) as I find that course to be the most interesting and intriguing. Through the Degree in Computer Science, I hope to get a good-paying job in the Information Technology field like an IT Specialist, Data Scientist, Software Engineer, or a Data Scientist. I believe these possible careers best suit my personality of being Investigative and Conventional all while being things that I am passionate about.</p>
             </div>
             <div class="abouttohomeouter"><a href="index.html" class="abouttohome">Back to Home</a></div>
         </div>
