--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>
         About Me
@@ -15,7 +18,7 @@
     <section>
         <div class="container3">
             <h2 class="about">
-                More about Keane
+                <mark class="bhighlight">More about Keane</mark>
             </h2>
             <div class="aboutpagetext">
                 <p>Keane is a patient and kind person who listens to his peers with understanding and empathy. He is able to think flexibly when problems arise, often suggesting solutions. He is capable of attaining his potential if he persists in the face of adversities. He also has an immense zeal for learning, responds to new academic concepts with awe and wonder and is an effective team player who contributes positively to group discussions.</p><br>
