--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Personal Portfolio</title>
 </head>
@@ -24,7 +27,7 @@
             <div class="intro1">
                 <img src="BW2.jpg" alt="keane" class="introimage">
                 <div class="intro1text">
-                   <h2>Keane Travasso</h2>
+                   <h2><mark class="bhighlight">Keane Travasso</mark></h2>
                    <p>Diploma in Information Technology</p>
                    <p>Ngee Ann Polytechnic</p>
                    <p>keane@gmail.com</p>
@@ -43,7 +46,7 @@
         <div class="container2">
             <!-- About Flexbox -->
             <div class="aboutindex">
-                <h2 class="about2">About</h2>
+                <h2 class="about2"><mark class="whighlight">About</mark></h2>
                 <h3 class="bgd">My Background</h3>
                 <p class="abouttext">I am a person who appreciates peace and enjoys working and making connections with all types of people. I often find myself motivating and encouraging other teammates when they are in doubt. I also take delight in thinking flexibly to solve problems and succeed.</p>
                 <div class="aboutbuttonouter"><a href="about.html" class="aboutbutton">Read More</a></div>
@@ -51,7 +54,7 @@
             <!-- Education Flexbox -->
             <!-- Images are hyperlinked -->
             <div class="education">
-                <h2 class="edu">Education</h2>
+                <h2 class="edu"><mark class="bhighlight">Education</mark></h2>
                 <h3 class="whr">Where I have learned</h3>
                 <!-- Primary School -->
                 <p class="saps"><a href="https://stanthonyspri.moe.edu.sg/" target="_blank"><img src="saps.jpg" alt="Saps" width="100" height="100"></a></p>
@@ -76,7 +79,7 @@
                 </div>
                 <!-- Work Experience  -->
                 <div class="exp">
-                    <h2 class="work">Experience</h2>
+                    <h2 class="work"><mark class="bhighlight">Experience</mark></h2>
                     <h3 class="whr2">Where I have worked</h3>
                     <p class="ntuc"><a href="https://www.fairprice.com.sg/" target="_blank"><img src="ntuc.jpg" alt="NTUC" width="100" height="100"></a></p>
                     <div class="exptext">
@@ -86,7 +89,7 @@
                 </div>
             <!-- Skills & Languages Flexbox -->
             <div class="skillbox">
-                <h2 class="sl">Skills & Languages</h2>
+                <h2 class="sl"><mark class="whighlight">Skills & Languages</mark></h2>
                 <div class="skilltxt">
                     <p>Microsoft Powerpoint</p>
                     <p>Microsoft Word</p>
@@ -103,13 +106,20 @@
             </div>
             <!-- Projects Flexbox -->
             <div class="projects">
-                <h2 class="projecthead">Some of my Projects</h2>
+                <h2 class="projecthead"><mark class="bhighlight">Some of my Projects</mark></h2>
                 <div>
                     <p class="protxt">- Redesigning TimeTree Website's Interface</p>
                     <p class="protxt">- Redesigning Ikea Website's Interface</p>
                     <p class="protxt">- Designing Obscurify</p>
                 </div>
                 <div class="projectbuttonouter"><a href="project.html" class="projectbutton">Read More</a></div>
+            </div>
+            <div class="contact">
+                <h2 class="contacthead"><mark class="whighlight">Contact Information</mark></h2>
+                <div class="contactinfo">
+                    <p>Phone Number: 91234567</p>
+                    <p>Email: keane@gmail.com</p>
+                </div>
             </div>
             </div>
         </div>
