--- a/project.html
+++ b/project.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>My Projects</title>
 </head>
@@ -12,12 +15,15 @@
     <header><h2>My Projects</h2></header>
     <section>
         <div class="container4">
-            <h2 class="projecttitle">The Projects</h2>
+            <h2 class="projecttitle"><mark class="bhighlight">The Projects</mark></h2>
             <div class="timetree">
                 <h3 class="tttitle">TimeTree</h3>
                 <p class="ttcontent">TimeTree is a calendar app that allows multiple users to sync thier calendars anc collaborate with each other to plan events. This app also has a multitude of useful functions and is 4.5 Stars on the Play Store. I was hired by TimeTree to redesign their webpage.</p>
                 <p class="ttlink">
                     <a href="https://timetreeapp.com/intl/en/" target="_blank"><img src="timetree.jpg" alt="TimeTree" width="300"></a>
+                </p>
+                <p class="ttlink2">
+                    <a href="https://timetreeapp.com/intl/en/" target="_blank">Link to Page</a>
                 </p>
             </div>
             <div class="ikea">
@@ -26,12 +32,18 @@
                 <p class="ikealink">
                     <a href="https://www.ikea.com/sg/en/" target="_blank"><img src="ikea.jpg" alt="Ikea" width="300"></a>
                 </p>
+                <p class="ikealink2">
+                    <a href="https://www.ikea.com/sg/en/" target="_blank">Link to Page</a>
+                </p>
             </div>
             <div class="obsc">
                 <h3 class="obsctitle">Obscurify</h3>
                 <p class="obsccontent">Obscurify is a web application that looks through a user's Spotify playlist to judge how obscure the user's music taste is, in comparison to the rest of the country or globally. I was hired to design the interface of this webpage.</p>
                 <p class="obsclink">
                     <a href="https://obscurifymusic.com/login#!/" target="_blank"><img src="obscurify.jpg" alt="Obscurify" width="300"></a>
+                </p>
+                <p class="obsclink2">
+                    <a href="https://obscurifymusic.com/login#!/" target="_blank">Link to Page</a>
                 </p>
             </div>
             <div class="projecttohomeouter"><a href="index.html" class="projecttohome">Back to Home</a></div>
